--- a/WnF/View/Base.lproj/LaunchScreen.storyboard
+++ b/WnF/View/Base.lproj/LaunchScreen.storyboard
@@ -15,16 +15,31 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LaunchScreenImage" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="cbF-I0-Nuu">
+                                <rect key="frame" x="0.0" y="241" width="414" height="414"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="414" id="Gse-3H-eaz"/>
+                                    <constraint firstAttribute="width" constant="414" id="YmE-yu-OD1"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="cbF-I0-Nuu" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="MTU-ed-hio"/>
+                            <constraint firstItem="cbF-I0-Nuu" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="YPG-rh-0Km"/>
+                            <constraint firstItem="cbF-I0-Nuu" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="eS0-zA-mLl"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52.173913043478265" y="375"/>
         </scene>
     </scenes>
     <resources>
+        <image name="LaunchScreenImage" width="1284" height="1115"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
