--- a/WnF/View/Base.lproj/LaunchScreen.storyboard
+++ b/WnF/View/Base.lproj/LaunchScreen.storyboard
@@ -4,7 +4,6 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -25,7 +24,7 @@
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="cbF-I0-Nuu" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="MTU-ed-hio"/>
                             <constraint firstItem="cbF-I0-Nuu" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="YPG-rh-0Km"/>
@@ -40,8 +39,5 @@
     </scenes>
     <resources>
         <image name="LaunchScreenImage" width="1284" height="1115"/>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
     </resources>
 </document>
